Freedom Sanbox Ant Deploy/src/objects/Points_Calculator__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Points Calculator</label>
    <nameField>
        <label>Points Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>